diagramme plus joli

--- a/docs/04-DS.md
+++ b/docs/04-DS.md
@@ -16,4 +16,4 @@ Symboles utilisés :
 
 Le diagramme de séquence fait partie d'UML (Unified Modeling Language / Langage de modélisation unifié), c'est une manière standard / normée de représenter schématiquement un système.
 
-![demo](img/demo-sequence.png)
+![demo](img/sequence.png)
